--- a/pom.xml
+++ b/pom.xml
@@ -5,24 +5,30 @@
   <parent>
     <groupId>org.jenkins-ci.plugins</groupId>
     <artifactId>plugin</artifactId>
-    <!-- Baseline Jenkins version you use to build and test the plugin. Users must have this version or newer to run. -->
-    <version>2.17</version>
+    <version>3.43</version> <!-- or whatever the newest version available is -->
     <relativePath />
   </parent>
 
+  <name>Datadog Plugin</name>
+  <description>This plugin is used to forward metrics, events, and service checks to your account at Datadog, automatically.</description>
+  <url>https://github.com/jenkinsci/datadog-plugin</url>
+  <!--<url>https://wiki.jenkins-ci.org/display/JENKINS/Datadog+Plugin</url>-->
   <groupId>org.datadog.jenkins.plugins</groupId>
   <artifactId>datadog</artifactId>
   <version>1.0.1-SNAPSHOT</version>
   <packaging>hpi</packaging>
 
-  <name>Datadog Plugin</name>
-  <description>This plugin is used to forward metrics, events, and service checks to your account at Datadog, automatically.</description>
-  <url>https://wiki.jenkins-ci.org/display/JENKINS/Datadog+Plugin</url>
+  <properties>
+    <jenkins.version>2.150</jenkins.version>
+    <java.level>8</java.level>
+    <findbugs.skip>true</findbugs.skip>
+    <powermock.version>1.6.6</powermock.version>
+  </properties>
 
   <licenses>
     <license>
       <name>MIT</name>
-      <url>http://www.opensource.org/licenses/mit-license.php</url>
+      <url>https://www.opensource.org/licenses/mit-license.php</url>
     </license>
   </licenses>
 
@@ -37,26 +43,21 @@
   <scm>
     <connection>scm:git:git://github.com/jenkinsci/datadog-plugin.git</connection>
     <developerConnection>scm:git:git@github.com:jenkinsci/datadog-plugin.git</developerConnection>
-    <url>http://github.com/jenkinsci/datadog-plugin</url>
+    <url>https://github.com/jenkinsci/datadog-plugin</url>
     <tag>HEAD</tag>
   </scm>
-
-  <properties>
-    <findbugs.skip>true</findbugs.skip>
-    <powermock.version>1.6.6</powermock.version>
-  </properties>
 
   <repositories>
     <repository>
       <id>repo.jenkins-ci.org</id>
-      <url>http://repo.jenkins-ci.org/public/</url>
+      <url>https://repo.jenkins-ci.org/public/</url>
     </repository>
   </repositories>
 
   <pluginRepositories>
     <pluginRepository>
       <id>repo.jenkins-ci.org</id>
-      <url>http://repo.jenkins-ci.org/public/</url>
+      <url>https://repo.jenkins-ci.org/public/</url>
     </pluginRepository>
   </pluginRepositories>
 
