--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
   <properties>
     <!--See https://github.com/jenkinsci/plugin-pom/-->
     <!--<jenkins.version>2.150</jenkins.version>-->
-    <!--<java.level>8</java.level>-->
+    <java.level>8</java.level>
     <!--<jenkins-test-harness.version>2.2</jenkins-test-harness.version>-->
   </properties>
 
