--- a/pom.xml
+++ b/pom.xml
@@ -117,18 +117,11 @@
       <!--<scope>test</scope>-->
     <!--</dependency>-->
 
-    <!--&lt;!&ndash; https://mvnrepository.com/artifact/org.mockito/mockito-core &ndash;&gt;-->
-    <!--<dependency>-->
-      <!--<groupId>org.mockito</groupId>-->
-      <!--<artifactId>mockito-core</artifactId>-->
-      <!--<version>3.2.4</version>-->
-      <!--<scope>test</scope>-->
-    <!--</dependency>-->
-
+    <!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
-      <version>2.0.42-beta</version>
+      <version>3.2.4</version>
       <scope>test</scope>
     </dependency>
 
