--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 
   <properties>
     <!--See https://github.com/jenkinsci/plugin-pom/-->
-    <jenkins.version>2.176.1</jenkins.version>
+    <!--<jenkins.version>2.214</jenkins.version>-->
     <java.level>8</java.level>
     <!--<jenkins-test-harness.version>2.2</jenkins-test-harness.version>-->
   </properties>
