--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.jenkins-ci.plugins</groupId>
     <artifactId>plugin</artifactId>
-    <version>3.54</version> <!-- or whatever the newest version available is -->
+    <version>3.55</version> <!-- or whatever the newest version available is -->
     <!--Check https://mvnrepository.com/artifact/org.jenkins-ci.plugins/plugin?repo=jenkins-releases-->
     <relativePath />
   </parent>
@@ -20,11 +20,11 @@
   <packaging>hpi</packaging>
 
   <properties>
-    <!--See https://github.com/jenkinsci/plugin-pom/-->
-    <jenkins.version>2.176.1</jenkins.version> <!-- default 2.138.4 (too low), 2.150.1 (too low), 2.179.1, 2.190.1, 2.214,  -->
+    <!--&lt;!&ndash;See https://github.com/jenkinsci/plugin-pom/&ndash;&gt;-->
+    <!--<jenkins.version>2.176.1</jenkins.version> &lt;!&ndash; default 2.138.4 (too low), 2.150.1 (too low), 2.179.1, 2.190.1, 2.214,  &ndash;&gt;-->
     <java.level>8</java.level>
-    <slf4jVersion>1.7.26</slf4jVersion>
-    <!--<jenkins-test-harness.version>2.2</jenkins-test-harness.version>-->
+    <!--<slf4jVersion>1.7.26</slf4jVersion>-->
+    <!--&lt;!&ndash;<jenkins-test-harness.version>2.2</jenkins-test-harness.version>&ndash;&gt;-->
   </properties>
 
   <licenses>
@@ -71,17 +71,17 @@
     </pluginRepository>
   </pluginRepositories>
 
-  <dependencyManagement>
-    <dependencies>
-      <dependency>
-        <groupId>io.jenkins.tools.bom</groupId>
-        <artifactId>bom-2.176.x</artifactId>
-        <version>5</version>
-        <scope>import</scope>
-        <type>pom</type>
-      </dependency>
-    </dependencies>
-  </dependencyManagement>
+  <!--<dependencyManagement>-->
+    <!--<dependencies>-->
+      <!--<dependency>-->
+        <!--<groupId>io.jenkins.tools.bom</groupId>-->
+        <!--<artifactId>bom-2.176.x</artifactId>-->
+        <!--<version>5</version>-->
+        <!--<scope>import</scope>-->
+        <!--<type>pom</type>-->
+      <!--</dependency>-->
+    <!--</dependencies>-->
+  <!--</dependencyManagement>-->
 
   <dependencies>
     <dependency>
@@ -91,26 +91,26 @@
     </dependency>
 
     <!--See https://jenkins.io/doc/developer/testing/-->
-    <dependency>
-      <groupId>org.jenkins-ci.plugins.workflow</groupId>
-      <artifactId>workflow-basic-steps</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.jenkins-ci.plugins.workflow</groupId>
-      <artifactId>workflow-cps</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.jenkins-ci.plugins.workflow</groupId>
-      <artifactId>workflow-durable-task-step</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.jenkins-ci.plugins.workflow</groupId>
-      <artifactId>workflow-job</artifactId>
-      <scope>test</scope>
-    </dependency>
+    <!--<dependency>-->
+      <!--<groupId>org.jenkins-ci.plugins.workflow</groupId>-->
+      <!--<artifactId>workflow-basic-steps</artifactId>-->
+      <!--<scope>test</scope>-->
+    <!--</dependency>-->
+    <!--<dependency>-->
+      <!--<groupId>org.jenkins-ci.plugins.workflow</groupId>-->
+      <!--<artifactId>workflow-cps</artifactId>-->
+      <!--<scope>test</scope>-->
+    <!--</dependency>-->
+    <!--<dependency>-->
+      <!--<groupId>org.jenkins-ci.plugins.workflow</groupId>-->
+      <!--<artifactId>workflow-durable-task-step</artifactId>-->
+      <!--<scope>test</scope>-->
+    <!--</dependency>-->
+    <!--<dependency>-->
+      <!--<groupId>org.jenkins-ci.plugins.workflow</groupId>-->
+      <!--<artifactId>workflow-job</artifactId>-->
+      <!--<scope>test</scope>-->
+    <!--</dependency>-->
 
     <!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
     <dependency>
