--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -3,4 +3,4 @@
 # and another team can own the rest of the directory.
 
 # All your base
-*                       @jenkinsci/datadog-plugin-developers
+*                       @gzussa @jirikuncar @zippolyte @nmuesch @bkabrda
