--- a/pom.xml
+++ b/pom.xml
@@ -45,10 +45,10 @@
   </scm>
 
   <repositories>
-    <repository>
-      <id>releases.repo.jenkins-ci.org</id>
-      <url>https://repo.jenkins-ci.org/releases/</url>
-    </repository>
+    <!--<repository>-->
+      <!--<id>releases.repo.jenkins-ci.org</id>-->
+      <!--<url>https://repo.jenkins-ci.org/releases/</url>-->
+    <!--</repository>-->
     <repository>
       <id>public.repo.jenkins-ci.org</id>
       <url>https://repo.jenkins-ci.org/public/</url>
@@ -56,10 +56,10 @@
   </repositories>
 
   <pluginRepositories>
-    <pluginRepository>
-      <id>releases.repo.jenkins-ci.org</id>
-      <url>https://repo.jenkins-ci.org/releases/</url>
-    </pluginRepository>
+    <!--<pluginRepository>-->
+      <!--<id>releases.repo.jenkins-ci.org</id>-->
+      <!--<url>https://repo.jenkins-ci.org/releases/</url>-->
+    <!--</pluginRepository>-->
     <pluginRepository>
       <id>public.repo.jenkins-ci.org</id>
       <url>https://repo.jenkins-ci.org/public/</url>
