--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
 
   <properties>
     <java.level>8</java.level>
+    <hpi.compatibleSinceVersion>1.0.0</hpi.compatibleSinceVersion>
   </properties>
 
   <licenses>
