--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,12 @@
       <artifactId>powermock-module-junit4</artifactId>
       <version>2.0.2</version>
       <scope>test</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>org.hamcrest</groupId>
+          <artifactId>hamcrest-core</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
   </dependencies>
 
