Add pipeline pause and build duration (#77)
* adds pause duration, build time

* Use hostname var

* Add build and pauseduration to README

* Add SCM checkout duration

* Add tests

* Add mockito file to mock final

* Update jenkins parent pom version

* Remove checkout duration

* Address review

* Update metric names

* Update README.md

Co-authored-by: Sarah Witt <witt.s@husky.neu.edu>

* Update README.md

Co-authored-by: Sarah Witt <witt.s@husky.neu.edu>

* Fix dependencies for tests

Co-authored-by: Alexander Reitz <alexander.reitz@lenspired.me>
Co-authored-by: Alexander Reitz <52011202+nebuk4d@users.noreply.github.com>
Co-authored-by: Sarah Witt <witt.s@husky.neu.edu>

--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,11 @@
       <artifactId>workflow-job</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.jenkins-ci.plugins.pipeline-stage-view</groupId>
+      <artifactId>pipeline-rest-api</artifactId>
+      <version>2.12</version>
+    </dependency>
+    <dependency>
       <groupId>org.jenkins-ci.plugins.workflow</groupId>
       <artifactId>workflow-cps</artifactId>
     </dependency>
@@ -108,6 +113,26 @@
       <groupId>org.jenkinsci.plugins</groupId>
       <artifactId>pipeline-model-definition</artifactId>
       <version>1.4.0</version>
+      <scope>test</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>com.fasterxml.jackson.core</groupId>
+          <artifactId>jackson-core</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>com.fasterxml.jackson.core</groupId>
+          <artifactId>jackson-databind</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.jenkins-ci.plugins</groupId>
+          <artifactId>jackson2-api</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>org.jenkins-ci.plugins</groupId>
+      <artifactId>jackson2-api</artifactId>
+      <version>2.9.8</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
