--- a/pom.xml
+++ b/pom.xml
@@ -167,6 +167,30 @@
           </archive>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>com.diffplug.spotless</groupId>
+        <artifactId>spotless-maven-plugin</artifactId>
+        <version>2.17.4</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>check</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <ratchetFrom>origin/master</ratchetFrom>
+          <java>
+            <includes>
+              <include>src/main/java/**/*.java</include>
+              <include>src/test/java/**/*.java</include>
+            </includes>
+            <googleJavaFormat/>
+            <importOrder/>
+            <removeUnusedImports/>
+          </java>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 
