Add to test phase

--- a/pom.xml
+++ b/pom.xml
@@ -176,6 +176,7 @@
             <goals>
               <goal>check</goal>
             </goals>
+            <phase>test</phase>
           </execution>
         </executions>
         <configuration>
