Revert "Remove deprecated `java.level` property (#306)"
This reverts commit 8d9d67f38b2d10bfbbd864746767289a5c34bbe8.

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
   <packaging>hpi</packaging>
 
   <properties>
+    <java.level>8</java.level>
     <jenkins.version>2.346.1</jenkins.version>
     <hpi.compatibleSinceVersion>1.0.0</hpi.compatibleSinceVersion>
     <dd-trace-java.version>0.71.0</dd-trace-java.version>
