--- a/pom.xml
+++ b/pom.xml
@@ -154,6 +154,11 @@
       <version>2.9.8</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.eclipse.jetty</groupId>
+      <artifactId>jetty-client</artifactId>
+      <version>9.4.51.v20230217</version>
+    </dependency>
   </dependencies>
 
   <build>
