--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
   <url>https://github.com/jenkinsci/datadog-plugin</url>
   <groupId>org.datadog.jenkins.plugins</groupId>
   <artifactId>datadog</artifactId>
-  <version>5.4.2-SNAPSHOT</version>
+  <version>5.4.2</version>
   <packaging>hpi</packaging>
 
   <properties>
@@ -46,7 +46,7 @@
     <connection>scm:git:git://github.com/jenkinsci/datadog-plugin.git</connection>
     <developerConnection>scm:git:git@github.com:jenkinsci/datadog-plugin.git</developerConnection>
     <url>https://github.com/jenkinsci/datadog-plugin</url>
-    <tag>datadog-3.0.0</tag>
+    <tag>datadog-5.4.2</tag>
   </scm>
 
   <repositories>
