Add ability to granualarly filter events  (#364)
* removed posix-api dependency from pom

* added plugin side filtering functionality and unit test cases

* mainly UI changes and event naming changed

* added environment variable tests

* removed config changed event, added conflicting fig checks and tests

* Update src/main/java/org/datadog/jenkins/plugins/datadog/DatadogUtilities.java

Co-authored-by: Sarah Witt <sarah.witt@datadoghq.com>

* Update src/main/java/org/datadog/jenkins/plugins/datadog/DatadogGlobalConfiguration.java

Co-authored-by: Sarah Witt <sarah.witt@datadoghq.com>

* Update src/test/java/org/datadog/jenkins/plugins/datadog/DatadogGlobalConfigurationTest.java

Co-authored-by: Sarah Witt <sarah.witt@datadoghq.com>

* Update src/main/java/org/datadog/jenkins/plugins/datadog/DatadogGlobalConfiguration.java

Co-authored-by: Sarah Witt <sarah.witt@datadoghq.com>

* changed naming of utilities check to send event method

* removed previously deprecated config change getters and setters

* removed event name from class and checking event send method uses name string rather than event

* moved inclusion list creation to datadog utilities and adjusted tests for env variable conflicts

* renamed config check method in global config

* updated documentation

* Remove explicit check for overlapping filters

* Fix tests to assert error message rather than exception

* Update spacing

* Apply suggestions from code review

Co-authored-by: Brett Blue <84536271+brett0000FF@users.noreply.github.com>

* change to shouldSendEvent

* move isTemporarily to base class and still send metrics if event category is excluded

* Update src/main/resources/org/datadog/jenkins/plugins/datadog/DatadogGlobalConfiguration/config.jelly

Co-authored-by: NouemanKHAL <noueman.khal@gmail.com>

* Move event names to constants

* Update README.md

Co-authored-by: Brett Blue <84536271+brett0000FF@users.noreply.github.com>

----

--- a/pom.xml
+++ b/pom.xml
@@ -76,7 +76,6 @@
   </dependencyManagement>
 
   <dependencies>
-
     <dependency>
       <groupId>io.jenkins.plugins</groupId>
       <artifactId>jnr-posix-api</artifactId>
@@ -99,6 +98,12 @@
       <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
       <version>3.4.0</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.github.stefanbirkner</groupId>
+      <artifactId>system-rules</artifactId>
+      <version>1.19.0</version>
       <scope>test</scope>
     </dependency>
     <dependency>
