Submit pipeline stages and steps without waiting until the pipeline finishes

--- a/src/test/resources/org/datadog/jenkins/plugins/datadog/test-config.yml
+++ b/src/test/resources/org/datadog/jenkins/plugins/datadog/test-config.yml
@@ -3,6 +3,6 @@ jenkins:
 
 unclassified:
     datadogGlobalConfiguration:
-      reportWith: 'http'
+      reportWith: 'HTTP'
       targetApiKey: 'test'
       emitConfigChangeEvents: true
